# sage

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
.obsidian/: bookmarks.json  graph.json  graph_view.css  justify.css  workspace.json
asset/: CMakeLists.txt
asset/shader/: CMakeLists.txt  flat_color.glsl  some.glsl  square.glsl  texture.glsl
asset/texture/: CMakeLists.txt
cmake/: assert.cmake  build_type.cmake  ccache.cmake  compiler.cmake  convenience.cmake  dependencies.cmake  docs.cmake  generator.cmake  linker.cmake  options.cmake  packages.cmake  perf.cmake  section.cmake  subdirectories.cmake  summary.cmake
docs/: CMakeLists.txt  README.md.in  TODO.md.in  cpp_file.in  file.in  todo_note.md.in
docs/.obsidian/: workspace.json
perf/: CMakeLists.txt
sandbox/: CMakeLists.txt  layer_2d.hpp  layer_sandbox.hpp  main.cpp  placeholder_layers.hpp
src/: CMakeLists.txt  app.cpp  app.hpp  camera.hpp  core.hpp  ecs.hpp  entry_point.hpp  event.cpp  event.hpp  filesystem.hpp  fmt.hpp  formatter.hpp  glm.hpp  graphics.hpp  imgui_config.h  input.hpp  layer.cpp  layer.hpp  layer_imgui.hpp  log.cpp  log.hpp  math.hpp  particle.hpp  perf.hpp  polymorphic_tuple_storage.hpp  ref_wrapper.hpp  repr.cpp  repr.hpp  sage.hpp  std.cpp  std.hpp  time.hpp  util.hpp  window.cpp  window.hpp
src/platform/: CMakeLists.txt
src/platform/linux/: CMakeLists.txt  glfw.hpp  graphics.hpp  input.hpp  sage.hpp  window.cpp  window.hpp
test/: CMakeLists.txt  app.test.cpp  doctest.hpp  ecs.test.cpp  event.cpp  event.test.cpp  glm.test.cpp  layer.test.cpp  layer_imgui.test.cpp  linux_input.test.cpp  linux_window.test.cpp  log.test.cpp  placeholder_layers.hpp  some.cpp  test.ecs.cpp  test.event.cpp  test.glm.cpp  test.hpp  test.layer.cpp  test.layer_imgui.cpp  test.linux.input.cpp  test.linux.window.cpp  test.log.cpp  test.platform.linux.input.cpp  test.platform.linux.window.cpp  test.util.cpp  util.test.cpp
